[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurocaps"
version = "0.9.0post1"
authors = [{name = "Donisha Smith", email = "donishasmith@outlook.com"}]
description = "Co-activation patterns Python package"
readme = "README.md"
requires-python = ">=3.9.0"
keywords = ["python", "Co-Activation Patterns", "CAPs", "neuroimaging", "fmri", "dfc", "dynamic functional connectivity", "fMRIPrep"]
classifiers = [
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Development Status :: 4 - Beta"
]
dependencies = ["numpy",
                "pandas",
                "matplotlib",
                "seaborn",
                "kneed",
                "nibabel",
                "nilearn == 0.10.2",
                "surfplot",
                "neuromaps",
                "pybids; platform_system != 'Windows'"
                ]

[project.urls]
Homepage = "https://github.com/donishadsmith/neurocaps"  

[tool.distutils.bdist_wheel]
universal = true