[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "neurocaps.__version__"}

[project]
name = "neurocaps"
dynamic = ["version"]
license = {text = "MIT License"}
authors = [{name = "Donisha Smith", email = "donishasmith@outlook.com"}]
description = "Co-activation Patterns (CAPs) Python package"
readme = "README.md"
requires-python = ">=3.9.0"
keywords = ["python", "Co-Activation Patterns", "CAPs", "neuroimaging", "fmri", "dfc", "dynamic functional connectivity", "fMRIPrep"]
classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Development Status :: 4 - Beta"
    ]
dependencies = ["numpy>=1.22.0, <2.0.0", # Allows brainspace to work
                "pandas>=2.0.0",
                "joblib>=1.3.0",
                "matplotlib>=3.6.0",
                "seaborn>=0.11.0",
                "kneed>=0.8.0",
                "nibabel>=3.2.0",
                "nilearn>=0.10.1, !=0.10.3",
                "scikit-learn>=1.4.0",
                "scipy>=1.6.0",
                "surfplot>=0.2.0",
                "neuromaps>=0.0.5",
                "pybids>=0.16.2; platform_system != 'Windows'",
                "plotly>=4.9",
                "nbformat>=4.2.0", # For plotly
                "kaleido==0.1.0.post1; platform_system == 'Windows'", # Plotly saving seems to work best with this version for Windows
                "kaleido; platform_system != 'Windows'",
                "setuptools; python_version>='3.12'"
                ]

[project.optional-dependencies]
windows = ["pybids>=0.16.2"]

test = ["pytest",
        "pytest-cov"
        ]

[project.urls]
Homepage = "https://neurocaps.readthedocs.io/en/latest/"
Github = "https://github.com/donishadsmith/neurocaps"
Issues = "https://github.com/donishadsmith/neurocaps/issues"  
Changelog = "https://neurocaps.readthedocs.io/en/latest/changelog.html"

[tool.black]
line-length = 150
skip-string-normalization = true

[tool.distutils.bdist_wheel]
universal = true