[build-system]
requires = ["setuptools>=77.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "neurocaps.__version__"}

[project]
name = "neurocaps"
dynamic = ["version"]
license = "MIT"
authors = [{name = "Donisha Smith", email = "donishasmith@outlook.com"}]
description = "Co-activation Patterns (CAPs) Python package"
readme = "README.md"
requires-python = ">=3.9.0, <3.13"

keywords = [
    "python",
    "Co-Activation Patterns",
    "CAPs",
    "neuroimaging",
    "fmri",
    "dfc",
    "dynamic functional connectivity",
    "fMRIPrep"
    ]

classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Development Status :: 4 - Beta"
    ]

dependencies = [
    "numpy>=1.26.3",
    "pandas>=2.1.0",
    "joblib>=1.3.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.11.0",
    "kneed>=0.8.5",
    "nibabel>=5.0.0",
    "nilearn>=0.10.4",
    "scikit-learn>=1.4.0",
    "scipy>=1.10.0",
    "brainspace>=0.1.16", # Version >= 0.1.16 due to a numpy > 2.0 compatibility issue; used by surfplot
    "surfplot>=0.2.0",
    "neuromaps>=0.0.5",
    "pybids>=0.16.5; platform_system != 'Windows'",
    "plotly>=5.19.0, !=6.1.0, <=6.1.2", # TODO: ``fig.write_image`` issue in 6.1.0
    "nbformat>=5.10.0", # Needed for plotly figures to display in Jupyter Notebooks without errors
    "kaleido==0.1.0.post1; platform_system == 'Windows'", # Used by plotly for saving plots; TODO: Check if versions > 1.0.0 work on Windows
    "kaleido>=0.2.0, <1.0.0; platform_system != 'Windows'",
    "setuptools>=77.0.1; python_version>='3.12'", # Results in installation errors if not included as dependency
    "typing_extensions>=4.10.0",
    "vtk>=9.2.0, <9.4.0", # Version >= 9.4.0 works for 3.13 but incompatible with brainspace due no  "__vtkname__" in Pointset
    "tqdm>=4.65.0"
    ]

[project.optional-dependencies]
benchmark = ["asv", "virtualenv<20.31.0"]
demo = ["ipywidgets", "openneuro-py"]
development = ["pre-commit"]
test = ["pytest", "pytest-cov", "pytest-rerunfailures"]
windows = ["pybids>=0.16.2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["neurocaps", "neurocaps.*"]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "raise .*",
    "LG\\.warning",
    "os\\.makedirs"
]

[tool.coverage.run]
branch = true
source = ["neurocaps"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[project.urls]
Homepage = "https://neurocaps.readthedocs.io"
Github = "https://github.com/donishadsmith/neurocaps"
Issues = "https://github.com/donishadsmith/neurocaps/issues"
Changelog = "https://neurocaps.readthedocs.io/en/stable/changelog.html"

[bdist_wheel]
universal = 1
